# toggle_cool_cow_says_type

./: CHANGELOG.md  Cargo.toml  README.md  SPEC.md  TODO.md
.github/workflows/: release.yml
src/: config.rs  error.rs  gamestate.rs  main.rs  words.rs
