[package]
name = "toggle_cool_cow_says_type"
version = "0.1.0"
authors = ["Togglebit <me@togglebit.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
tinybit = { git = "https://github.com/togglebyte/tinybit" }
walkdir = "2.3.1"
